Optimizations in `ModListScreen`